= 1.7.2 = * FIX default behavior to not always show the toolbar on the front end [facepalm] * NEW users have toolbar off by default * NEW option to force toolbar to show for everyone, everywhere * NEW soma_option for setting the Login page logo * custom login logos should be transparent PNG of 320x70 exactly, with content aligned bottom center for best results * stopped hiding user profile fields
git-svn-id: https://plugins.svn.wordpress.org/somatic-framework/trunk@578646 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/soma-login-styles.css
+++ b/css/soma-login-styles.css
@@ -9,16 +9,6 @@ body.login { background-color: #e6e8ea;
 position: relative;
 }
 
-.login h1 a {
-    /*    background: url(../images/logo-login.png) no-repeat top center;*/
-    width: 326px;
-    height: 67px;
-    text-indent: -9999px;
-    overflow: hidden;
-    padding-bottom: 15px;
-    display: block;
-}
-
 body.login #login {
     width: 320px;
     padding: 114px 0 0;
